--- a/gui/workday.ui
+++ b/gui/workday.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QGroupBox" name="groupBox">
+    <widget class="QGroupBox" name="dayGroup">
      <property name="title">
       <string>GroupBox</string>
      </property>
