--- a/gui/workday.ui
+++ b/gui/workday.ui
@@ -21,6 +21,22 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
+       <widget class="QPushButton" name="addButton">
+        <property name="font">
+         <font>
+          <family>Leelawadee UI</family>
+          <pointsize>12</pointsize>
+          <weight>50</weight>
+          <bold>false</bold>
+          <kerning>true</kerning>
+         </font>
+        </property>
+        <property name="text">
+         <string>Add</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <layout class="QVBoxLayout" name="entryLayout"/>
       </item>
       <item>
